2016-11-06 Jana Mendrok  <jana.mendrok@chalmers.se>

	* arts-2-3-557

	* src/m_optproperties.cc, methods.cc (TestScatDataInterp):
	Extented to emulate RT4 ssd extraction (not exactly te same though, as
	RT4 does not need individial inc/sca direction extraction and allow for
	in-place comparison of results. Allow user to control WSM behaviour a
	little more.

	* src/optproperties.cc (pha_mat_labCalc):
	Bug fix (delta azimtuh of 180 or 360 deg is forms great circle, not
	their sum). Effects random oriented particles only. Brings the MC/RT4
	like ssd extraction in TestScatDataInterp into agreement. Negligible
	effect on full RT solution, though.

2016-11-04  Oliver Lemke  <olemke@core-dump.info>

	* arts-2-3-556

	* doc/uguide/arts_developer.tex, doc/uguide/arts_theory.tex,
	doc/uguide/arts_user.tex:

	Add UHH address for contributor list.

2016-11-01  Oliver Lemke  <olemke@core-dump.info>

	* arts-2-3-555

	* montecarlo.cc (pha_mat_singleCalc):

	Fix indexing bug in inner loop over scattering elements. Caused a crash
	for cases that did not use ScatSpeciesMerge.

	* m_optproperties.cc (scat_dataCheck):

	Remove output of loop variables to out2. They create a huge amount of
	clutter in the output without giving any useful information.  They are
	still included in the error output if something goes wrong.

	Demote coefficients output from out2 to out3. This output was too
	detailed for out2.

2016-10-30  Patrick Eriksson  <patrick.eriksson@chalmers.se>

	* arts-2-3-554

	* src/m_montecarlo.cc (MCGeneral): Path sampling now put inside a
	try block, to be somewhat more resistent against failures in the
	path sampling. Warning and error message are displayed at
	failures. The calculations are halted if there are 5 failures for
	one radiance calculation.

	* src/montecarlo.cc (mcPathTraceGeneral): Now waiting until 100000
	path points before issuing an error. The old value (25000) can be
	passed with tau limit and thick clouds.
